<resources>
    <string name="app_name">OpenWidgets</string>
    <string name="OK">OK</string>
    <string name="APPLY">Apply</string>
    <string name="CANCEL">Cancel</string>
    <string name="activityTitle_about">OpenWidgets - About</string>
    <string name="activityTitle_main">OpenWidgets - Home</string>
    <string name="activityTitle_settings">OpenWidgets - Settings</string>
    <string name="activityTitle_dateWidgetConfigurator">OpenWidgets - Date Widget Configurator</string>
    <string name="activityTitle_debug">OpenWidgets - Debug</string>
    <string name="activityTitle_logger">OpenWidgets - Logger</string>
    <string name="main_button_about">About</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_text_widgetsNotFound">No widgets found. Add a widget to your home screen and come back</string>
    <string name="main_checkbox_idMode">View id in widgets</string>
    <string name="main_dateWidgetsButtonsSlot_title">Date And Time</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_language">Language</string>
    <string name="settings_widgetsUpdateDelayMillis">Widgets refresh rate</string>
    <string name="settings_checkBox_logger">Debug Logging</string>
    <string name="settings_title_backup">Backup</string>
    <string name="settings_backup_import">Import Data</string>
    <string name="settings_backup_export">Export Data</string>
    <string name="logger_clear" translatable="false">Clear logs</string>
    <string name="logger_autoScroll" translatable="false">Auto Scroll</string>
    <string name="updateChecker_button_toSite">Go to the site</string>
    <string name="updateChecker_button_changeLog">Changelog</string>
    <string name="updateChecker_button_download">Download</string>
    <string name="updateChecker_text_FORMAT_VERSION_NOT_SUPPORTED">Update found! We found that there is already a new update. But unfortunately we won\'t be able to download it automatically. Download it yourself!</string>
    <string name="updateChecker_text_VERSION_OUTDATED">Update found! Your app version is out of date. Download a new one!</string>
    <string name="updateChecker_text_VERSION_NOT_RELEASE">Your version of the application was not found on the server, we recommend downloading the latest one.</string>
    <string name="updateChecker_text_ERROR">Error from update checker:\n * Code: %ERROR_CODE%\n * Message: %ERROR_MESSAGE%</string>
    <string name="widgetName_unsupported">UNSUPPORTED</string>
    <string name="widgetName_date">Date and Time</string>
    <string name="widget_date_clickToStartService">Loading... (Click)</string>
    <string name="widgetConfigurator_widgetDeleted">Widget deleted</string>
    <string name="widgetConfigurator_date_pattern">Pattern</string>
    <string name="widgetConfigurator_date_patternContent">Content</string>
    <string name="widgetConfigurator_date_patternSize">Size</string>
    <string name="widgetConfigurator_date_patternColor">Color</string>
    <string name="widgetConfigurator_date_patternBackgroundColor">Background Color</string>
    <string name="widgetConfigurator_date_background">Background</string>
    <string name="widgetConfigurator_date_backgroundColor">Background Color</string>
    <string name="widgetConfigurator_date_backgroundGravity">Gravity</string>
    <string name="widgetConfigurator_date_menu_restoreToDefaults">Restore the default</string>
    <string name="widgetConfigurator_date_menu_restoreToDefault_warning_title">Restore the default value</string>
    <string name="widgetConfigurator_date_menu_restoreToDefault_warning_message">Do you really want to reset all the settings of this widget to the standard ones?</string>
    <string name="widgetConfigurator_date_menu_loadFromAnotherWidget">Load from another widget</string>
    <string name="widgetConfigurator_date_menu_loadFromAnotherWidget_title">Loading from another widget</string>
    <string name="widgetConfigurator_date_menu_loadFromAnotherWidget_message">When you click on the widget button, all the information from the widget you selected will be loaded into the current widget</string>
    <string name="widgetConfigurator_date_menu_delete">Delete</string>
    <string name="widgetConfigurator_date_menu_delete_warning_title">Deleting a Widget</string>
    <string name="widgetConfigurator_date_menu_delete_warning_message">When you delete a widget, all its data will be deleted, but the widget itself on the home screen will have to be deleted manually. This function can be useful if for some reason the widget from the home screen has disappeared, but the data in the application remains</string>
    <string name="gravity_center">Center</string>
    <string name="gravity_center_horizontal">Center horizontally</string>
    <string name="gravity_center_vertical">Center vertically</string>
    <string name="gravity_bottom">Bottom</string>
    <string name="gravity_left">Left</string>
    <string name="gravity_right">Right</string>
    <string name="gravity_top">Top</string>
    <string name="notification_foregroundWidgetsUpdaterService_title">The application is active</string>
    <string name="notification_foregroundWidgetsUpdaterService_text">This is necessary to keep the application open</string>
    <string name="notification_channel_WidgetsUpdaterServiceForeground_description">Update widgets in background</string>
    <string name="notification_channel_WidgetsUpdaterServiceForeground_title">Widgets Update</string>
    <string name="debug_title_updateChecker" translatable="false">Update Checker</string>
    <string name="debug_title_data" translatable="false">Data</string>
    <string name="debug_title_data_settings" translatable="false">Settings Data</string>
    <string name="debug_title_data_widgets" translatable="false">Widgets Data</string>
    <string name="debug_title_dialogUtils" translatable="false">Dialog Utils</string>
    <string name="debug_title_onlyDebugMode">Only Debug Mode</string>
    <string name="debug_title_services">Services</string>
    <string name="debug_title_unknown">Unknown</string>
    <string name="debug_button_updateChecker_thisVersion">This version</string>
    <string name="debug_button_updateChecker_getVersion" translatable="false">getVersion (server)</string>
    <string name="debug_button_updateChecker_changeAppBuild" translatable="false">Change AppBuild</string>
    <string name="debug_button_updateChecker_changeVersionsFormat" translatable="false">Change VersionsFormat</string>
    <string name="debug_button_updateChecker_changeVersionsUrl" translatable="false">Change VersionsURL</string>
    <string name="debug_button_services_startWidgetsUpdater" translatable="false">Start WidgetsUpdaterService</string>
    <string name="debug_button_services_stopWidgetsUpdater" translatable="false">Stop WidgetsUpdaterService</string>
    <string name="debug_button_services_startedList">Started List</string>
    <string name="debug_button_data_paths_update" translatable="false">updatePaths();</string>
    <string name="debug_button_data_paths_variables" translatable="false">Paths.java Variables</string>
    <string name="debug_button_data_settings_file" translatable="false">File settings.json</string>
    <string name="debug_dialog_data_settings_file_description" translatable="false">Edit file settings.json</string>
    <string name="debug_button_data_settings_variables" translatable="false">SettingsData Variables</string>
    <string name="debug_button_data_settings_save" translatable="false">Save</string>
    <string name="debug_button_data_settings_load" translatable="false">Load</string>
    <string name="debug_button_data_widgets_file" translatable="false">File widgets.json</string>
    <string name="debug_dialog_data_widgets_file_description" translatable="false">Edit file widgets.json</string>
    <string name="debug_button_data_widgets_variables" translatable="false">WidgetsData.java Variables</string>
    <string name="debug_button_data_widgets_save" translatable="false">Save</string>
    <string name="debug_button_data_widgets_load" translatable="false">Load</string>
    <string name="debug_button_unknown_openActivity" translatable="false">Open Activity</string>
    <string name="debug_button_unknown_testJavaError">catch test java Exception (errorDetectorWrapper)</string>
    <string name="debug_button_dialogUtils_test1">Test 1</string>
    <string name="debug_button_dialogUtils_test2">Test 2</string>
    <string name="debug_button_dialogUtils_test3" translatable="false">Test 3 (NotifyDialog)</string>
    <string name="debug_button_dialogUtils_test4" translatable="false">Test 4 (InputDialog)</string>
    <string name="debug_button_onlyDebugMode_enable">Enable</string>
    <string name="debug_button_onlyDebugMode_disable">Disable</string>
    <string name="debug_button_unknown_log">Logs</string>
    <string name="settings_widgetsUpdateDelayMillis_message">Widget refresh rate in milliseconds. The lower the number, the more often the widget will be updated, but the battery will also run out faster. 1000 milliseconds = 1 time per second</string>
    <string name="widgetConfigurator_date_patternPadding">Padding</string>
    <string name="widgetConfigurator_date_backgroundPadding">Padding</string>
    <string name="widgetConfigurator_date_patternContent_help">Help</string>
    <string name="widgetConfigurator_date_patternContent_helpText"><![CDATA["If\"? \" appears on the widget instead of the desired result, it means that it has not been implemented yet\n
%% - a literal %
%a - locale's abbreviated weekday name (e.g., Sun)
%A - locale's full weekday name (e.g., Sunday)
%b - locale's abbreviated month name (e.g., Jan)
%B - locale's full month name (e.g., January)
%c - locale's date and time (e.g., Thu Mar  3 23:05:25 2005)
%C - century; like %Y, except omit last two digits (e.g., 20)
%d - day of month (e.g., 01)
%D - date; same as %m/%d/%y
%e - day of month, space padded; same as %_d
%F - full date; like %+4Y-%m-%d
%g - last two digits of year of ISO week number (see %G)
%G - year of ISO week number (see %V); normally useful only with %V
%h - same as %b
%H - hour (00..23)
%I - hour (01..12)
%j - day of year (001..366)
%k - hour, space padded ( 0..23); same as %_H
%l - hour, space padded ( 1..12); same as %_I
%m - month (01..12)
%M - minute (00..59)
%n - a newline
%N - nanoseconds (000000000..999999999)
%p - locale's equivalent of either AM or PM; blank if not known
%P - like %p, but lower case
%q - quarter of year (1..4)
%r - locale's 12-hour clock time (e.g., 11:11:04 PM)
%R - 24-hour and minute; same as %H:%M
%s - seconds since 1970-01-01 00:00:00 UTC
%S - second (00..60)
%t - a tab
%T - time; same as %H:%M:%S
%u - day of week (1..7); 1 is Monday
%U - week number of year, with Sunday as first day of week(00..53)
%V - ISO week number, with Monday as first day of week (01..53)
%w - day of week (0..6); 0 is Sunday
%W - week number of year, with Monday as first day of week(00..53)
%x - locale's date representation (e.g., 12/31/99)
%X - locale's time representation (e.g., 23:13:48)
%y - last two digits of year (00..99)
%Y - year
%z - +hhmm numeric time zone (e.g., -0400)
%:z    +hh:mm numeric time zone (e.g., -04:00)
%::z   +hh:mm:ss numeric time zone (e.g., -04:00:00)
%:::z  numeric time zone with : to necessary precision (e.g.,
-04, +05:30)
%Z - alphabetic time zone abbreviation (e.g., EDT)
"]]></string>
    <string name="widgetConverter_fromV2_title">WARNING</string>
    <string name="settings_checkBox_isStopWidgetsUpdaterAfterScreenOff">Stop updating after screen off</string>
    <string name="settings_checkBox_isStartWidgetsUpdaterAfterScreenOn">Start updating after screen on</string>
    <string name="widget_network_wifi">Wi-Fi\n[?]</string>
    <string name="widget_network_cellular">MOBILE\n[?]</string>
    <string name="widget_network_ap">AP\n[?]</string>
</resources>