<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:longClickable="false"
        android:measureAllChildren="false"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="82dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_appLanguage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/settings_language" />

            <Button
                android:id="@+id/settings_button_widgetsUpdateDelayMillis"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="@string/settings_widgetsUpdateDelayMillis" />

            <CheckBox
                android:id="@+id/main_checkBox_widgetsIdMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_checkbox_idMode" />

            <CheckBox
                android:id="@+id/settings_checkBox_isStopWidgetsUpdaterAfterScreenOff"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_checkBox_isStopWidgetsUpdaterAfterScreenOff" />

            <CheckBox
                android:id="@+id/settings_checkBox_isStartWidgetsUpdaterAfterScreenOn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/settings_checkBox_isStartWidgetsUpdaterAfterScreenOn" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>