<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/widget_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#bbDEDFDE"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/widget_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaDEDFDE"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <ImageView
                android:id="@+id/widget_img_launcher"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/public_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Widget Header"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:paddingStart="@dimen/widget_header_padding"
                android:paddingLeft="@dimen/widget_header_padding"
                android:paddingEnd="@dimen/widget_header_padding"
                android:paddingRight="@dimen/widget_header_padding"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/widget_layout_ssid_or_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaDEDFDE"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:id="@+id/ssid_or_carrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="|"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:paddingStart="@dimen/widget_header_padding"
                android:paddingLeft="@dimen/widget_header_padding"
                android:paddingEnd="@dimen/widget_header_padding"
                android:paddingRight="@dimen/widget_header_padding"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/widget_layout_ip_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaDEDFDE"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <TextView
                android:id="@+id/line_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:paddingStart="@dimen/widget_header_padding"
                android:paddingLeft="@dimen/widget_header_padding"
                android:paddingEnd="@dimen/widget_header_padding"
                android:paddingRight="@dimen/widget_header_padding"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/widget_layout_local_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaDEDFDE"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">
            <ImageView
                android:id="@+id/widget_img_local_ip"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/local_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123.456.789.012"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                android:paddingStart="@dimen/widget_header_padding"
                android:paddingLeft="@dimen/widget_header_padding"
                android:paddingEnd="@dimen/widget_header_padding"
                android:paddingRight="@dimen/widget_header_padding"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/my_widget_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaDEDFDE"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textAllCaps="false">
            <Button
                android:id="@+id/wifi_button_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/widget_network_wifi" />
            <Button
                android:id="@+id/cellular_button_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/widget_network_cellular" />
            <Button
                android:id="@+id/ap_button_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/widget_network_ap" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
